add prices to menu

--- a/index.html
+++ b/index.html
@@ -304,31 +304,38 @@
             <div id="pizza-size">
                 <h4>Pizza Size</h4>
                 <ul>
-                    <li><input class="radio" type="radio" id="small" name="size" value="small">
-                        <label class="label" for="small"><span>Small</span></label><span class="price">price</span></li>
-                    <li><input class="radio" type="radio" id="medium" name="size" value="medium">
-                        <label class="label" for="medium"><span>Medium</span></label><span class="price">price</span></li>
-                    <li><input class="radio" type="radio" id="large" name="size" value="large">
-                        <label class="label" for="large"><span>Large</span></label><span class="price">price</span></li>
+                    <li><input class="radio" type="radio" id="small" name="size" value="750">
+                        <label class="label" for="small"><span>Small</span></label><span class="price">ksh. <span id="s-price">750</span></span>
+                    </li>
+                    <li><input class="radio" type="radio" id="medium" name="size" value="950">
+                        <label class="label" for="medium"><span>Medium</span></label><span class="price">ksh. <span id="m-price">950</span></span>
+                    </li>
+                    <li><input class="radio" type="radio" id="large" name="size" value="1350">
+                        <label class="label" for="large"><span>Large</span></label><span class="price">ksh. <span id="l-price">1350</span></span>
+                    </li>
                 </ul>
 
             </div>
             <div id="pizza-base">
                 <h4>Pizza Base</h4>
                 <ul>
-                    <li><input type="radio" id="thin" name="base" value="thin">
-                        <label for="thin">Thin Crust</label><span class="price">price</span></li>
                     <li>
-                        <input type="radio" id="thick" name="base" value="thick">
-                        <label for="thick">Thick Crust</label><span class="price">price</span>
+                        <input type="radio" id="original" name="base" value="0" checked>
+                        <label for="original">Original</label><span class="price">ksh. 0</span>
+                    </li>
+                    <li><input type="radio" id="thin" name="base" value="250">
+                        <label for="thin">Thin Crust</label><span class="price">ksh. 250</span></li>
+                    <li>
+                        <input type="radio" id="thick" name="base" value="350">
+                        <label for="thick">Thick Crust</label><span class="price">ksh. 350</span>
                     </li>
                     <li>
-                        <input type="radio" id="cheese-crust" name="base" value="cheese-crust">
-                        <label for="cheese-crust">Cheese Stuffed</label><span class="price">price</span>
+                        <input type="radio" id="cheese-crust" name="base" value="400">
+                        <label for="cheese-crust">Cheese Stuffed</label><span class="price">ksh. 400</span>
                     </li>
                     <li>
-                        <input type="radio" id="gluten" name="base" value="gluten">
-                        <label for="gluten">Gluten Free</label><span class="price">price</span>
+                        <input type="radio" id="gluten" name="base" value="250">
+                        <label for="gluten">Gluten Free</label><span class="price">ksh. 250</span>
                     </li>
                 </ul>
             </div>
@@ -336,32 +343,32 @@
                 <h4>Pizza Size</h4>
                 <ul>
                     <li>
-                        <input type="checkbox" id="topping1" name="topping1" value="Bacon">
-                        <label for="topping1"> Bacon</label><span class="price">price</span>
+                        <input type="checkbox" id="topping1" name="topping1" value="100">
+                        <label for="topping1"> Bacon</label><span class="price">ksh. 100</span>
                     </li>
                     <li>
-                        <input type="checkbox" id="topping2" name="topping2" value="Cheddar">
-                        <label for="topping2"> Cheddar</label><span class="price">price</span>
+                        <input type="checkbox" id="topping2" name="topping2" value="50">
+                        <label for="topping2"> Cheddar</label><span class="price">ksh. 100</span>
                     </li>
                     <li>
-                        <input type="checkbox" id="topping3" name="topping3" value="Jalapeno">
-                        <label for="topping3"> Jalapeno</label><span class="price">price</span>
+                        <input type="checkbox" id="topping3" name="topping3" value="100">
+                        <label for="topping3"> Jalapeno</label><span class="price">ksh. 100</span>
                     </li>
                     <li>
-                        <input type="checkbox" id="topping4" name="topping4" value="Ground Beef">
-                        <label for="topping4"> Ground Beef</label><span class="price">price</span>
+                        <input type="checkbox" id="topping4" name="topping4" value="150">
+                        <label for="topping4"> Ground Beef</label><span class="price">ksh. 150</span>
                     </li>
                     <li>
-                        <input type="checkbox" id="topping5" name="topping5" value="Mozzarella">
-                        <label for="topping5"> Mozzarella</label><span class="price">price</span>
+                        <input type="checkbox" id="topping5" name="topping5" value="100">
+                        <label for="topping5"> Mozzarella</label><span class="price">ksh. 100</span>
                     </li>
                     <li>
-                        <input type="checkbox" id="topping6" name="topping6" value="Pepperoni">
-                        <label for="topping6"> Pepperoni</label><span class="price">price</span>
+                        <input type="checkbox" id="topping6" name="topping6" value="150">
+                        <label for="topping6"> Pepperoni</label><span class="price">ksh. 150</span>
                     </li>
                     <li>
-                        <input type="checkbox" id="topping7" name="topping7" value="Beef Steak Pieces">
-                        <label for="topping7"> Beef Steak Pieces</label><span class="price">price</span>
+                        <input type="checkbox" id="topping7" name="topping7" value="200">
+                        <label for="topping7"> Beef Steak Pieces</label><span class="price">ksh. 200</span>
                     </li>
                 </ul>
 
