--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
                 <div class="flex-container">
                     <div id="icon">
-                        <button class="btn" onclick="filterSelection('all')"><img id="all" src="img/icons/pizza.png" alt="cheese"></button>
+                        <button class="btn active" onclick="filterSelection('all')"><img id="all" src="img/icons/pizza.png" alt="cheese"></button>
                         <span class="caption">Show All</span>
                     </div>
                     <div id="icon">
@@ -292,112 +292,113 @@
 
     <!--Modal Box-->
     <div id="myModal" class="modal">
-
         <!-- Modal Box content -->
         <div class="modal-content">
             <span class="close">&times;</span>
-            <div class="container-flex pizza-sel" id="select">
-                <!-- <img id="selected-pizza" src="img/pizza/pizza-3.jpeg" alt=""> -->
+            <form id="choose-pizza">
+                <div class="container-flex pizza-sel" id="select">
+                    <!-- <img id="selected-pizza" src="img/pizza/pizza-3.jpeg" alt=""> -->
 
-            </div>
-            <h3 id="chgtext">Type</h3>
-            <div id="pizza-size">
-                <h4>Pizza Size</h4>
-                <ul>
-                    <li><input class="radio" type="radio" id="small" name="size" value="750">
-                        <label class="label" for="small"><span>Small</span></label><span class="price">ksh. <span id="s-price">750</span></span>
-                    </li>
-                    <li><input class="radio" type="radio" id="medium" name="size" value="950">
-                        <label class="label" for="medium"><span>Medium</span></label><span class="price">ksh. <span id="m-price">950</span></span>
-                    </li>
-                    <li><input class="radio" type="radio" id="large" name="size" value="1350">
-                        <label class="label" for="large"><span>Large</span></label><span class="price">ksh. <span id="l-price">1350</span></span>
-                    </li>
-                </ul>
+                </div>
+                <h3 id="chgtext">Type</h3>
+                <div id="pizza-size">
+                    <h4>Pizza Size</h4>
+                    <ul>
+                        <li><input class="radio" type="radio" id="small" name="size" value="750">
+                            <label class="label" for="small"><span>Small</span></label><span class="price">ksh. <span id="s-price">750</span></span>
+                        </li>
+                        <li><input class="radio" type="radio" id="medium" name="size" value="950" checked>
+                            <label class="label" for="medium"><span>Medium</span></label><span class="price">ksh. <span id="m-price">950</span></span>
+                        </li>
+                        <li><input class="radio" type="radio" id="large" name="size" value="1350">
+                            <label class="label" for="large"><span>Large</span></label><span class="price">ksh. <span id="l-price">1350</span></span>
+                        </li>
+                    </ul>
 
-            </div>
-            <div id="pizza-base">
-                <h4>Pizza Base</h4>
-                <ul>
-                    <li>
-                        <input type="radio" id="original" name="base" value="0" checked>
-                        <label for="original">Original</label><span class="price">ksh. 0</span>
-                    </li>
-                    <li><input type="radio" id="thin" name="base" value="250">
-                        <label for="thin">Thin Crust</label><span class="price">ksh. 250</span></li>
-                    <li>
-                        <input type="radio" id="thick" name="base" value="350">
-                        <label for="thick">Thick Crust</label><span class="price">ksh. 350</span>
-                    </li>
-                    <li>
-                        <input type="radio" id="cheese-crust" name="base" value="400">
-                        <label for="cheese-crust">Cheese Stuffed</label><span class="price">ksh. 400</span>
-                    </li>
-                    <li>
-                        <input type="radio" id="gluten" name="base" value="250">
-                        <label for="gluten">Gluten Free</label><span class="price">ksh. 250</span>
-                    </li>
-                </ul>
-            </div>
-            <div id="toppings">
-                <h4>Pizza Size</h4>
-                <ul>
-                    <li>
-                        <input type="checkbox" id="topping1" name="topping1" value="100">
-                        <label for="topping1"> Bacon</label><span class="price">ksh. 100</span>
-                    </li>
-                    <li>
-                        <input type="checkbox" id="topping2" name="topping2" value="50">
-                        <label for="topping2"> Cheddar</label><span class="price">ksh. 100</span>
-                    </li>
-                    <li>
-                        <input type="checkbox" id="topping3" name="topping3" value="100">
-                        <label for="topping3"> Jalapeno</label><span class="price">ksh. 100</span>
-                    </li>
-                    <li>
-                        <input type="checkbox" id="topping4" name="topping4" value="150">
-                        <label for="topping4"> Ground Beef</label><span class="price">ksh. 150</span>
-                    </li>
-                    <li>
-                        <input type="checkbox" id="topping5" name="topping5" value="100">
-                        <label for="topping5"> Mozzarella</label><span class="price">ksh. 100</span>
-                    </li>
-                    <li>
-                        <input type="checkbox" id="topping6" name="topping6" value="150">
-                        <label for="topping6"> Pepperoni</label><span class="price">ksh. 150</span>
-                    </li>
-                    <li>
-                        <input type="checkbox" id="topping7" name="topping7" value="200">
-                        <label for="topping7"> Beef Steak Pieces</label><span class="price">ksh. 200</span>
-                    </li>
-                </ul>
+                </div>
+                <div id="pizza-base">
+                    <h4>Pizza Base</h4>
+                    <ul>
+                        <li>
+                            <input type="radio" id="original" name="base" value="0" checked>
+                            <label for="original">Original</label><span class="price">ksh. 0</span>
+                        </li>
+                        <li><input type="radio" id="thin" name="base" value="250">
+                            <label for="thin">Thin Crust</label><span class="price">ksh. 250</span></li>
+                        <li>
+                            <input type="radio" id="thick" name="base" value="350">
+                            <label for="thick">Thick Crust</label><span class="price">ksh. 350</span>
+                        </li>
+                        <li>
+                            <input type="radio" id="cheese-crust" name="base" value="400">
+                            <label for="cheese-crust">Cheese Stuffed</label><span class="price">ksh. 400</span>
+                        </li>
+                        <li>
+                            <input type="radio" id="gluten" name="base" value="250">
+                            <label for="gluten">Gluten Free</label><span class="price">ksh. 250</span>
+                        </li>
+                    </ul>
+                </div>
+                <div id="toppings">
+                    <h4>Pizza Size</h4>
+                    <ul>
+                        <li>
+                            <input type="checkbox" id="topping1" name="topping" value="100">
+                            <label for="topping1"> Bacon</label><span class="price">ksh. 100</span>
+                        </li>
+                        <li>
+                            <input type="checkbox" id="topping2" name="topping" value="100">
+                            <label for="topping2"> Cheddar</label><span class="price">ksh. 100</span>
+                        </li>
+                        <li>
+                            <input type="checkbox" id="topping3" name="topping" value="100">
+                            <label for="topping3"> Jalapeno</label><span class="price">ksh. 100</span>
+                        </li>
+                        <li>
+                            <input type="checkbox" id="topping4" name="topping" value="150">
+                            <label for="topping4"> Ground Beef</label><span class="price">ksh. 150</span>
+                        </li>
+                        <li>
+                            <input type="checkbox" id="topping5" name="topping" value="100">
+                            <label for="topping5"> Mozzarella</label><span class="price">ksh. 100</span>
+                        </li>
+                        <li>
+                            <input type="checkbox" id="topping6" name="topping" value="150">
+                            <label for="topping6"> Pepperoni</label><span class="price">ksh. 150</span>
+                        </li>
+                        <li>
+                            <input type="checkbox" id="topping7" name="topping" value="200">
+                            <label for="topping7"> Beef Steak Pieces</label><span class="price">ksh. 200</span>
+                        </li>
+                    </ul>
 
-            </div>
-            <div class="mi__add-btn">
-                <h4>Quantity</h4>
-                <div class="input-group inline-group">
-                    <div class="input-group-prepend">
-                        <button class="btn btn-outline-secondary btn-minus">
+                </div>
+                <div class="mi__add-btn">
+                    <h4>Quantity</h4>
+                    <div class="input-group inline-group">
+                        <div class="input-group-prepend">
+                            <button class="btn btn-outline-secondary btn-minus">
                         <i class="fa fa-minus"></i>
                       </button>
-                    </div>
-                    <input class="form-control quantity" min="1" name="quantity" value="1" type="number">
-                    <div class="input-group-append">
-                        <button class="btn btn-outline-secondary btn-plus">
+                        </div>
+                        <input class="form-control quantity" min="1" name="quantity" value="1" type="number">
+                        <div class="input-group-append">
+                            <button class="btn btn-outline-secondary btn-plus">
                         <i class="fa fa-plus"></i>
                       </button>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="container-fluid">
-                <button id="checkout-btn">Checkout</button>
-            </div>
-
+                <div class="container-fluid">
+                    <button id="checkout-btn">Checkout</button>
+                </div>
+            </form>
         </div>
+    </div>
 
-        <div class="container-fluid">
+    <div class="container-fluid">
 
-        </div>
+    </div>
     </div>
     <div id="checkout" class="modal">
         <div class="modal-content" id="checkout-content">
@@ -416,7 +417,9 @@
                         </thead>
                         <tbody id="ordersmade">
                             <tr>
-                                <td id="pizzaname"></td>
+                                <td>
+                                    <h4 id="chgtext">Type</h4>
+                                </td>
                                 <td id="pizzasize"></td>
                                 <td id="pizzacrust"></td>
                                 <td id="pizzatopping"></td>
